Core/objects/RecommendedArticle__c/fields/ArticleHyperlink__c.field-meta.xml
<CustomField>
    <fullName>ArticleHyperlink__c</fullName>
    <description>Hyperlink to article with article title as label.</description>
    <formula>HYPERLINK(URL__c, IF(ISBLANK(Site__c), Title__c, Title__c &amp; &apos; | &apos; &amp; Site__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Article Hyperlink</label>
    <type>Text</type>
</CustomField>