Core/objects/RecommendedArticle__c/fields/TestExternalID__c.field-meta.xml
<CustomField>
    <fullName>TestExternalID__c</fullName>
    <description>External ID field used for maintaining relationships while loading data into scratch org.</description>
    <externalId>true</externalId>
    <label>Test External ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>